--- a/src_frontend/views_done/index.html
+++ b/src_frontend/views_done/index.html
@@ -5,23 +5,21 @@
     <title>Pet Care app</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
     <link rel="stylesheet" href="../styles/login/login_center.css">
-    <link rel="stylesheet" href="../styles/login/login_footer.css">
     <link rel="stylesheet" href="../styles/login/navbar.css">
 
     <link rel="icon" type="image/x-icon" href="../resources/favicon.ico">
 
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../styles/navigation_bar/index.css">
-    <link rel="stylesheet" href="../styles/login/navbar.css">
 </head>
 <main>
 
 
     <section>
 
-        <div class="center__container" style="border: 2px solid black;">
+        <div class="center__container" >
          
 
 
@@ -53,7 +51,6 @@
                     </div>
                 </div>
 
-                center div
 
                 <style>
 
@@ -75,7 +72,7 @@ img {
 
       
         </div>
-        <br><br>
+        <!-- <br><br> -->
         <div class="landing"></div>
         <div class="text"></div>
         <div class="slider"></div>
