--- a/src_frontend/GoogleMapsAPI/Primjer2_Lokalizacija/sample.html
+++ b/src_frontend/GoogleMapsAPI/Primjer2_Lokalizacija/sample.html
@@ -30,3 +30,36 @@
 <!-- <script src="../scripts/global/tab_name_changer.js"></script> -->
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
 	
+
+@model IList<Domain.Adlisting>
+  @{
+    ViewBag.Title = "Adlisting";
+  }
+  
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Person</th>
+  
+          <th>Opis</th>
+          <th>Cijena</th>
+        </tr>
+      </thead>
+      <tbody>
+        @foreach (var item in Model)
+        {
+          <tr>
+            <td>@item.UserName</td>
+            <td>@item.Description</td>
+            <td>@item.Price</td>
+            <td>@item.IdLocation</td>
+          </tr>
+        }
+        </tbody>
+    </table>
+  </div>
+  <p>
+    <a asp-action="Create" class="btn btn-sm btn-primary">Add new adlisting</a>
+  </p>
+  
